@@ -231,8 +231,10 @@ void *
 ref_to_val_lk_gconf(void *arg, char *match, char *output, size_t max_size,
     void *mppd)
 {
+  PROC_SH_EX(match)
+
   void *ptr;
-  if ((ptr = ref_to_val_lk_generic(NULL, match, output, max_size, mppd)))
+  if ((ptr = ref_to_val_lk_generic(arg, match, output, max_size, mppd)))
     {
       return ptr;
     }
