@@ -193,11 +193,14 @@ void *
 ref_to_val_lk_online(void *arg, char *match, char *output, size_t max_size,
     void *mppd)
 {
+  PROC_SH_EX(match)
+
   void *ptr;
   if ((ptr = ref_to_val_lk_generic(NULL, match, output, max_size, mppd)))
     {
       return ptr;
     }
+
   if (!strncmp(match, _MC_ONLINE_SSL, 3))
     {
       return as_ref_to_val_lk(match, dt_rval_online_ssl, (__d_drt_h ) mppd,
