@@ -40,8 +40,11 @@ typedef struct ___d_drt_h
   void *rt_cond;
   char *st_p;
   char *st_p0;
-  char *st_p1;
+  void *v_p0;
   void *mppd_next;
+  void *mppd_aux_next;
+  char tp_b0[65536];
+  char *varg_l;
 } _d_drt_h, *__d_drt_h;
 
 
