@@ -245,7 +245,7 @@ g_xproc_rc(char *name, void *aa_rh, __g_eds eds);
 int
 g_xproc_m(unsigned char type, char *name, __std_rh aa_rh, __g_eds eds);
 void
-g_preproc_dm(char *name, __std_rh aa_rh, unsigned char type);
+g_preproc_dm(char *name, __d_xref p_xref, unsigned char type,  __std_rh aa_rh);
 
 _d_rtv_lk ref_to_val_lk_x;
 __d_ref_to_pval ref_to_val_ptr_x;
